.metals/metals.log
2023.05.04 16:45:06 INFO  Started: Metals version 0.11.12 in workspace '/home/aquillae7/Project/Java_dead_777' for client Visual Studio Code 1.77.3.
mai. 04, 2023 4:45:06 PM org.flywaydb.core.internal.license.VersionPrinter printVersionOnly
INFO: Flyway Community Edition 9.16.3 by Redgate
mai. 04, 2023 4:45:06 PM org.flywaydb.core.internal.license.VersionPrinter printVersion
INFO: See release notes here: https://rd.gt/416ObMi
mai. 04, 2023 4:45:06 PM org.flywaydb.core.internal.license.VersionPrinter printVersion
INFO: 
mai. 04, 2023 4:45:07 PM org.flywaydb.core.internal.database.base.BaseDatabaseType createDatabase
INFO: Database: jdbc:h2:file:/home/aquillae7/Project/Java_dead_777/.metals/metals (H2 2.1)
mai. 04, 2023 4:45:07 PM org.flywaydb.core.internal.schemahistory.JdbcTableSchemaHistory allAppliedMigrations
INFO: Schema history table "PUBLIC"."flyway_schema_history" does not exist yet
mai. 04, 2023 4:45:07 PM org.flywaydb.core.internal.command.DbValidate validate
INFO: Successfully validated 4 migrations (execution time 00:00.019s)
mai. 04, 2023 4:45:07 PM org.flywaydb.core.internal.schemahistory.JdbcTableSchemaHistory create
INFO: Creating Schema History table "PUBLIC"."flyway_schema_history" ...
mai. 04, 2023 4:45:07 PM org.flywaydb.core.internal.command.DbMigrate migrateGroup
INFO: Current version of schema "PUBLIC": << Empty Schema >>
mai. 04, 2023 4:45:07 PM org.flywaydb.core.internal.command.DbMigrate doMigrateGroup
INFO: Migrating schema "PUBLIC" to version "1 - Create tables"
mai. 04, 2023 4:45:07 PM org.flywaydb.core.internal.command.DbMigrate doMigrateGroup
INFO: Migrating schema "PUBLIC" to version "2 - Server discovery"
mai. 04, 2023 4:45:07 PM org.flywaydb.core.internal.command.DbMigrate doMigrateGroup
INFO: Migrating schema "PUBLIC" to version "3 - Jar symbols"
mai. 04, 2023 4:45:07 PM org.flywaydb.core.internal.command.DbMigrate doMigrateGroup
INFO: Migrating schema "PUBLIC" to version "4 - Fingerprints"
mai. 04, 2023 4:45:07 PM org.flywaydb.core.internal.command.DbMigrate logSummary
INFO: Successfully applied 4 migrations to schema "PUBLIC", now at version v4 (execution time 00:00.075s)
2023.05.04 16:45:07 INFO  time: initialize in 0.64s
2023.05.04 16:45:09 WARN  Build server is not auto-connectable.
2023.05.04 16:45:09 WARN  no build tool detected in workspace '/home/aquillae7/Project/Java_dead_777'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. 
2023.05.04 16:45:09 WARN  no build target for: /home/aquillae7/Project/Java_dead_777/Parte1/Bank.java
2023.05.04 16:45:09 WARN  Running javac-semanticdb failed for file:///home/aquillae7/Project/Java_dead_777/Parte1/Bank.java. Output:
/home/aquillae7/Project/Java_dead_777/Parte1/Bank.java:4: error: ';' expected
	 Bank(String name){this.name = name};
	                                   ^
/home/aquillae7/Project/Java_dead_777/Parte1/Bank.java:8: error: invalid method declaration; return type required
	 Test(String name){this.name =  name};
	 ^
/home/aquillae7/Project/Java_dead_777/Parte1/Bank.java:8: error: ';' expected
	 Test(String name){this.name =  name};
	                                    ^
/home/aquillae7/Project/Java_dead_777/Parte1/Bank.java:13: error: <identifier> expected
   System.out.Println(emp + "..." bank + "....");
                     ^
/home/aquillae7/Project/Java_dead_777/Parte1/Bank.java:13: error: <identifier> expected
   System.out.Println(emp + "..." bank + "....");
                         ^
5 errors
mai. 04, 2023 4:46:05 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
mai. 04, 2023 4:46:27 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
